--- a/SeihinShop/templates/base.html
+++ b/SeihinShop/templates/base.html
@@ -1,16 +1,16 @@
 <!doctype html>
-<title>{% block title %}{% endblock %} - Flaskr</title>
+<title>{% block title %}{% endblock %} - Seihin Shop</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <nav>
   <h1>Seihin Shop</h1>
   <ul>
     {% if g.user %}
       <li><span>{{ g.user['id'] }}</span>
-      <li><a href="{{ url_for('auth_page.logout') }}">Productos</a>
-      <li><a href="{{ url_for('auth_page.logout') }}">Comprado</a>
-      <li><a href="{{ url_for('auth_page.logout') }}">En venta</a>
-      <li><a href="{{ url_for('auth_page.logout') }}">Usuarios</a>
-      <li><a href="{{ url_for('auth_page.logout') }}">Mi cuenta</a>
+      <li><a href="{{ url_for('products_page.products') }}">Productos</a>
+      <li><a href="{{ url_for('purchase_page.purchases') }}">Comprado</a>
+      <li><a href="{{ url_for('products_page.on_sale') }}">En venta</a>
+      <li><a href="{{ url_for('users_page.users') }}">Usuarios</a>
+      <li><a href="{{ url_for('users_page.account') }}">Mi cuenta</a>
       <li><a href="{{ url_for('auth_page.logout') }}">Log Out</a>
     {% else %}
       <li><a href="{{ url_for('auth_page.signup') }}">Sign up</a>
