--- a/SeihinShop/templates/base.html
+++ b/SeihinShop/templates/base.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <title>{% block title %}{% endblock %} - Seihin Shop</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 <nav>
   <h1>Seihin Shop</h1>
   <ul>
