--- a/SeihinShop/templates/user/list-users.html
+++ b/SeihinShop/templates/user/list-users.html
@@ -11,7 +11,7 @@
             <th class="text-center">Id</th>
             <th class="text-center">Nombre(s)</th>
             <th class="text-center">Apellidos</th>
-            <th class="text-center">Email</th>
+            <th class="text-center">Username</th>
             <th class="text-center"></th>
         </tr>
     </thead>
