--- a/SeihinShop/templates/user/user.html
+++ b/SeihinShop/templates/user/user.html
@@ -10,8 +10,8 @@
     <input name="name" id="name" value={{ user[3] }} required>
     <label for="last_name">Apellidos</label>
     <input name="last_name" id="last_name" value={{ user[4] }} required>
-    <label for="email">Email</label>
-    <input name="email" id="email" value={{ user[1] }} required>
+    <label for="username">Username</label>
+    <input name="username" id="username" value={{ user[1] }} required>
     <input type="submit" value="Guardar">
   </form>
 {% endblock %}
