--- a/SeihinShop/templates/auth/signup.html
+++ b/SeihinShop/templates/auth/signup.html
@@ -6,6 +6,10 @@
 
 {% block content %}
   <form method="post">
+    <label for="name">Nombre(s)</label>
+    <input name="name" id="name" required>
+    <label for="last_name">Apellidos</label>
+    <input name="last_name" id="last_name" required>
     <label for="username">Username</label>
     <input name="username" id="username" required>
     <label for="password">Password</label>
