--- a/SeihinShop/templates/purchase/purchase.html
+++ b/SeihinShop/templates/purchase/purchase.html
@@ -1,1 +1,21 @@
 <!-- Plantilla de la compra -->
+{% extends 'base.html'}
+
+{% block header %}
+  <h1>{% block title %} Confirm your personal information {% endblock %}</h1>
+{% endblock %}
+
+{% block content %}
+  <form method="post">
+    <label for="address">Address</label>
+    <input name="address" id="address" required>
+  </form>
+
+  <label for="payment">Choose a payment method:</label>
+
+  <select name="payment" id="payment">
+    <option value="cash">Cash</option>
+    <option value="credit-debit">Credit/Debit card</option>
+
+  </select>
+{% endblock %}
