--- a/SeihinShop/templates/review/new-review.html
+++ b/SeihinShop/templates/review/new-review.html
@@ -7,7 +7,9 @@
 {% block content %}
   <form method="put">
     <p>Nueva Reseña</p><br/>
-    <textarea name="comentario" rows="5" cols="50">Escribe tu comentario: </textarea>
+    <textarea name="comentario" rows="10" cols="50">Escribe tu comentario: </textarea>
+    <label for="score">Calificacion</label>
+    <input name="score" id="score" value={{ review[4] }} required>
     <input type="submit" value="Guardar">
   </form>
 {% endblock %}
