--- a/SeihinShop/templates/user/user.html
+++ b/SeihinShop/templates/user/user.html
@@ -5,13 +5,12 @@
 {% endblock %}
 
 {% block content %}
-  <form method="put">
+  <form >
     <label for="name">Nombre(s)</label>
     <input name="name" id="name" value={{ user[3] }} required>
     <label for="last_name">Apellidos</label>
     <input name="last_name" id="last_name" value={{ user[4] }} required>
     <label for="username">Username</label>
     <input name="username" id="username" value={{ user[1] }} required>
-    <input type="submit" value="Guardar">
   </form>
 {% endblock %}
