CR reseñas plantillas y funciones

--- a/SeihinShop/templates/review/review.html
+++ b/SeihinShop/templates/review/review.html
@@ -1,3 +1,4 @@
+<!-- Plantilla de la reseña -->
 {% extends 'base.html' %}
 
 {% block header %}
@@ -10,8 +11,8 @@
     <input name="name" id="name" value={{ review[1] }} required>
     <label for="last_name">Producto</label>
     <input name="last_name" id="last_name" value={{ review[2] }} required>
-    <label for="username">Username</label>
-    <input name="username" id="username" value={{ user[1] }} required>
+    <label for="username">Descripcion</label>
+    <input name="username" id="username" value={{ user[3] }} required>
     <input type="submit" value="Guardar">
   </form>
 {% endblock %}
