--- a/SeihinShop/templates/product/list-products.html
+++ b/SeihinShop/templates/product/list-products.html
@@ -8,6 +8,13 @@
 {% endblock %}
 
 {% block content %}
+<form method="post">
+  <label for="search">Busca un producto</label>
+  <input name="search" id="search" required>
+
+  <input type="submit" value="Buscar">
+
+</form>
 
   <table class="table">
     <thead class="thead-light">
