--- a/SeihinShop/templates/auth/signup.html
+++ b/SeihinShop/templates/auth/signup.html
@@ -12,8 +12,8 @@
     <input name="last_name" id="last_name" required>
     <label for="username">Username</label>
     <input name="username" id="username" required>
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" required>
+    <label for="email">Email</label>
+    <input name="email" id="email" required>
     <input type="submit" value="Register">
   </form>
 {% endblock %}
