Agregando comprador y vendedor

--- a/SeihinShop/templates/auth/signup.html
+++ b/SeihinShop/templates/auth/signup.html
@@ -14,6 +14,8 @@
     <input name="username" id="username" required>
     <label for="email">Email</label>
     <input name="email" id="email" required>
+    <label for="is_vendedor">Vendedor?</label>
+    <input type="number" name="is_vendedor" id="is_vendedor" required>
     <input type="submit" value="Register">
   </form>
 {% endblock %}
