--- a/SeihinShop/templates/review/list-reviews.html
+++ b/SeihinShop/templates/review/list-reviews.html
@@ -8,8 +8,8 @@
   <table class="table">
     <thead class="thead-light">
         <tr>
-            <th class="text-center">Usuario</th>
-            <th class="text-center">Producto</th>
+            <th class="text-center">Id de Usuario</th>
+            <th class="text-center">Id de Producto</th>
             <th class="text-center">Reseña</th>
             <th class="text-center">Calificacion</th>
             <th class="text-center"></th>
@@ -21,7 +21,6 @@
       <td class="text-center align-middle">{{ review[2] }}</td>
       <td class="text-center align-middle">{{ review[3] }}</td>
       <td class="text-center align-middle">{{ review[4] }}</td>
-        <!-- <td class="text-center align-middle"><a href="{{ url_for('users_page.user', user_id=user[0]) }}">Ver mas</a></td> -->
     </tbody>
       {% endfor %}
   </table>
