--- a/SeihinShop/templates/auth/signup.html
+++ b/SeihinShop/templates/auth/signup.html
@@ -14,7 +14,7 @@
     <input name="username" id="username" required>
     <label for="email">Email</label>
     <input name="email" id="email" required>
-    <label for="is_vendedor">Vendedor?</label>
+    <label for="is_vendedor">Rol</label>
     <input type="number" name="is_vendedor" id="is_vendedor" required>
     <input type="submit" value="Register">
   </form>
