--- a/SeihinShop/templates/auth/signup.html
+++ b/SeihinShop/templates/auth/signup.html
@@ -15,7 +15,11 @@
     <label for="email">Email</label>
     <input name="email" id="email" required>
     <label for="is_vendedor">Rol</label>
-    <input type="number" name="is_vendedor" id="is_vendedor" required>
+    <select name="is_vendedor" id="is_vendedor">
+      <option value="Vendedor">Vendedor</option>
+      <option value="Comprador">Comprador</option>
+
+    </select>
     <input type="submit" value="Register">
   </form>
 {% endblock %}
