--- a/SeihinShop/templates/review/new-review.html
+++ b/SeihinShop/templates/review/new-review.html
@@ -9,7 +9,7 @@
     <label for="description"></label>
     <textarea name="description" id="description" rows="10" cols="50">Aquí escribe tu comentario: </textarea>
 
-    <label for="score">Calificacion (1 a 10)</label>
+    <label for="score">Calificación</label>
     <select name="score" id="score">
       <option value="1">1</option>
       <option value="2">2</option>
